# chessmart

./: .dockerignore  .env.example  Cargo.toml  Dockerfile.dev  README.md  docker-compose.yml  entrypoint.sh  justfile  readme.md
.sqlx/: query-14e19ed496b562e71dfc6860488324ba88917177f181621f93170de8638342f3.json  query-2ab7d0a174feb8ba021a8d41cf8421caf813ff5e8bb58a521ae8299ae1431eb5.json  query-35003ddd6b34e5ea0edd1bdd405701a7cacb4c5f12e63da3c349241dd6a2a736.json  query-87254a927acde76fda86a61a2020d34cff019096abf620a274e92d27e11d54b5.json  query-945229a9b3f209f9dcc70d3e32af07fb9ec98b9838b79d7bca1480dfb39f97c7.json
authentication/: .env  .env.example  Cargo.toml
authentication/migrations/: 20251015093928_create_users_table.sql
authentication/src/: config.rs  error.rs  main.rs
authentication/src/client/: database.rs  redis.rs
authentication/src/database/: user.rs
authentication/src/dtos/: request.rs  response.rs
authentication/src/repositories/: account_repository.rs  user.rs
authentication/src/services/: account_service.rs  mod.rs  redis.rs  session.rs  token.rs
authentication/src/state/: state.rs
authentication/src/utils/: claim.rs  mod.rs  password.rs  timestamps.rs
game/: .env  .env.example  Cargo.toml
game/src/: config.rs  error.rs  main.rs  primitives.rs
game/src/client/: mod.rs  nats.rs  redis.rs
game/src/jobs/: check_game_job.rs  mod.rs
game/src/repositories/: game_repository.rs
game/src/repositories/lua-scripts/: update-game.lua
game/src/services/: game_service.rs  mod.rs  streaming_service.rs
game/src/state/: mod.rs  state.rs  worker.rs
game/src/utils/: task.rs
gateway/: .env  .env.example  Cargo.toml
gateway/migrations/: 20251017131004_create_mmr_changes_table.sql
gateway/src/: config.rs  error.rs  lib.rs
gateway/src/database/: mod.rs  user.rs
gateway/src/dtos/: response.rs
gateway/src/handlers/: chat.rs  game.rs  matchmaking.rs  mod.rs
gateway/src/listeners/: game.rs  matchmaking.rs  mod.rs
gateway/src/redis/: redis.rs
gateway/src/routes/: accounts.rs  authentication.rs  mod.rs  websocket.rs
gateway/src/server/: mod.rs  state.rs
gateway/src/services/: authentication.rs  matchmaking_service.rs  mod.rs  redis.rs  session.rs
gateway/src/utils/: claim.rs  mod.rs
matchmaking/: .env  .env.example  Cargo.toml
matchmaking/src/: config.rs  error.rs  main.rs
matchmaking/src/client/: database.rs  mod.rs
matchmaking/src/database/: postgres.rs
matchmaking/src/redis/: redis.rs
matchmaking/src/repositories/: matchmaking_queue_repository.rs  mod.rs  player_status_repository.rs  ranking_repository.rs
matchmaking/src/repositories/lua-scripts/: add-player-to-queue.lua  match-players.lua  remove-player-from-queue.lua
matchmaking/src/server/: state.rs
matchmaking/src/services/: matchmaking_queue_service.rs  mod.rs  player_status_service.rs  ranking.rs  ranking_service.rs  streaming_service.rs
matchmaking/src/state/: state.rs
migrations/: 20251015093928_create_users_table.sql  20251017130945_create_rankings_table.sql
shared/: Cargo.toml  build.rs
shared/proto/: account.proto  game.proto  matchmaker.proto  ranking.proto
shared/src/: error.rs  events.rs  lib.rs  primitives.rs
src/: config.rs  error.rs  lib.rs  server.rs
src/constants/: mod.rs
src/database/: mod.rs  user.rs
src/dtos/: request.rs  response.rs
src/redis/: redis.rs
src/routes/: authentication.rs
src/server/: mod.rs  state.rs
src/services/: accounts.rs  authentication.rs  mod.rs  redis.rs  session.rs  token.rs
src/utils/: claim.rs  mod.rs  password.rs
