[workspace]
resolver = "2"

members = [
    "gateway",
    "matchmaking",
    "shared",
]

[workspace.dependencies]
anyhow = "1.0.94"
argon2 = "0.5.3"
async-trait = "0.1.80"
axum = "0.7.9"
axum-extra = { version = "0.10.3", features = ["typed-header"] }
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["env", "derive"] }
dotenvy = "0.15.7"
fake = { version = "4.4.0", features = ["derive", "uuid", "chrono"] }
hyper = "1"
jsonwebtoken = "9.3.1"
opentelemetry = "0.22.0"
opentelemetry-otlp = { version = "0.15.0", features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { version = "0.22.1", features = ["rt-tokio"] }
prost = "0.12"
prost-types = "0.12"
redis = { version = "0.32.7", features = ["tokio-comp"] }
reqwest = { version = "0.12.9", default-features = false }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "macros", "uuid", "chrono"] }
testcontainers = "0.23.1"
testcontainers-modules = { version = "0.11.4", features = ["postgres"] }
thiserror = "2.0.17"
tokio = { version = "1.47.1" }
tonic = "0.10"
tower = "0.4"
tower-http = { version = "0.6.6", features = ["cors", "fs", "set-header"] }
tracing = "0.1.41"
tracing-opentelemetry = "0.23.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }
utoipa = { version = "5.2.0", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "8.0.3", features = ["axum"] }
uuid = { version = "1", features = ["serde", "v4"] }
