[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["env", "derive"] }
jsonwebtoken = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
shared = { path = "../shared" }
redis = { workspace = true, features = ["tokio-comp"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "macros", "uuid", "chrono"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }

