[package]
name = "authentication"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["env", "derive"] }
dotenvy = { workspace = true }
fake = { workspace = true, features = ["derive", "uuid", "chrono"] }
jsonwebtoken = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
prost-types = { workspace = true }
shared = { path = "../shared" }
redis = { workspace = true, features = ["tokio-comp"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "macros", "uuid", "chrono"] }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
