[package]
name = "game"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-nats = { workspace = true }
async-trait = { workspace = true }
bincode = "1.3.3"
chrono = { workspace = true, features = ["serde"] }
shakmaty = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["env", "derive"] }
dotenvy = { workspace = true }
fake = { workspace = true, features = ["derive", "uuid", "chrono"] }
futures = "0.3.31"
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
prost = { workspace = true }
rand = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
shared = { path = "../shared" }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "macros", "uuid", "chrono"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"]}
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
uuid = { workspace = true, features = ["serde", "v4"] }
