[package]
name = "bunnychess-rs-gateway"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bunny-chess"
path = "src/bin/main.rs"

[lib]
name = "bunnychess"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true, features = ["backtrace"] }
async-trait = { workspace = true }
argon2 = { workspace = true }
axum = { workspace = true, features = ["http2", "ws"] }
axum-extra = { workspace = true, features = ["cookie", "typed-header"] }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["env", "derive"] }
dotenvy = { workspace = true }
fake = { workspace = true, features = ["derive", "uuid", "chrono"] }
hyper = { workspace = true }
jsonwebtoken = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["http-proto", "reqwest-client"] }
opentelemetry_sdk = { workspace = true, features = ["rt-tokio"] }
prost-types = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
reqwest = { workspace = true, default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "macros", "uuid", "chrono"] }
testcontainers = { workspace = true }
testcontainers-modules = { workspace = true, features = ["postgres"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["cors", "fs", "set-header"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }
uuid = { workspace = true, features = ["serde", "v4"] }
shared = { path = "../shared" }

[dependencies.tonic]
version = "0.10"
features = ["tls"]
