[package]
name = "matchmaking"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["env", "derive"] }
prost = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
shared = { path = "../shared" }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "macros", "uuid", "chrono"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"]}
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
