[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
prost = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "macros", "uuid", "chrono"] }
redis = { workspace = true, features = ["tokio-comp"] }
thiserror = { workspace = true }

[build-dependencies]
tonic-build = "0.10"
