[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "macros", "uuid", "chrono"] }
prost-types = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.10"
