[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
jsonwebtoken = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["postgres", "runtime-tokio", "tls-rustls", "migrate", "macros", "uuid", "chrono"] }
prost = { workspace = true }
prost-types = { workspace = true }
redis = { workspace = true, features = ["tokio-comp"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[build-dependencies]
tonic-build = "0.10"
